fixed footer overlapping

--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 2500px) {
+
     header {
         display: flex;
         justify-content: center;
@@ -78,7 +79,11 @@
         bottom: 0;
         width: 98.7%;
         background-color: grey;
+        margin-top: 50px;
         
+    }
+    .main {
+        margin-bottom: 50px; 
     }
 }
 
@@ -161,6 +166,10 @@
         bottom: 0;
         width: 95%;
         background-color: grey;
+        margin-top: 50px;
         
+    }
+    .main {
+        margin-bottom: 50px; 
     }
 }
